refactoring-side_bar.html
サイドバー のhtmlをリファクタリング
BEMのelementの入れ子を３階層までに
B__E__E

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,7 +9,7 @@
   .sidebar {
     width: 300px;
     position: fixed;
-    &__head {
+    .head {
       background-color: #253141;
       height: 100px;
       display: flex;
@@ -27,7 +27,7 @@
       color: #ffffff;
     }  
     }
-    &__body {
+    .body {
       background-color: #2f3e51;
       height: calc(100vh - 100px);
       padding: 20px 20px 0;
