--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -1,18 +1,18 @@
 .sidebar
-  .sidebar__head
-    .sidebar__head__box
-      .sidebar__head__box__user
+  .head
+    .head__box
+      .head__box__user
         user
-      .sidebar__head__box__icon
-        = link_to "#", class: "sidebar__head__btn" do
+      .head__box__icon
+        = link_to "#", class: "head__btn" do
           = icon('fas', 'edit')
-        = link_to "#", class: "sidebar__head__btn" do
+        = link_to "#", class: "head__btn" do
           = icon("fas", "cog")
         
-  .sidebar__body
-    = link_to "#", class: "sidebar__body__content__link" do
-      .sidebar__body__content
-        .sidebar__body__content__group
+  .body
+    = link_to "#", class: "body__content__link" do
+      .body__content
+        .body__content__group
           group
-        .sidebar__body__content__user
+        .body__content__user
           group-user
