--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -1,31 +1,31 @@
 .main
-  .main__head
-    .main__head__group-member
-      .main__head__group-member__group
+  .head
+    .head__group-member
+      .head__group-member__group
         
         group
-      .main__head__group-member__member
+      .head__group-member__member
         member :
-        .main__head__group-member__member__person
+        .head__group-member__member__person
           person
-    .main__head__exit
+    .head__exit
     = link_to "#", class: "main__head__exit-btn" do
       edit 
 
   
-  .main__chat
-    .main__chat__contents
-      .main__chat__contents__block
-        .main__chat__contents__block__user
+  .chat
+    .chat__contents
+      .chat__contents__block
+        .chat__contents__block__user
           user
-        .main__chat__contents__block__date
+        .chat__contents__block__date
           date
-      .main__chat__contents__message
+      .chat__contents__message
         message 
-  .main__form   
+  .message   
     %form.form
  
-      .main__form__block
+      .form__block
         %input{:type => "text", :placeholder => "type a message", :class => "input-text"}
 
         %label{class: "input-box__image"}
