--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -1,9 +1,9 @@
 .sidebar
   .head
-    .head__box
-      .head__box__user
+    .head__block
+      .head__block__user
         user
-      .head__box__icon
+      .head__block__icon
         = link_to "#", class: "head__btn" do
           = icon('fas', 'edit')
         = link_to "#", class: "head__btn" do
