--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,10 +2,10 @@
 @import "font-awesome-sprockets";
 @import "./font-awesome";
 
+$font-white: #ffffff;
+$btn-color: #38aef0;
 .wrapper {
   display: flex;
-
-
   .sidebar {
     width: 300px;
     position: fixed;
@@ -20,11 +20,11 @@
         display: flex;
         width: 100%;
         &__user {
-        color: #ffffff;
+        color: $font-white;
         }        
       }
     &__btn {
-      color: #ffffff;
+      color: $font-white;
     }  
     }
     .body {
@@ -36,15 +36,15 @@
         margin-bottom: 40px;
         &__group {
           font-size: 15px;
-          color: #ffffff;
+          color: $font-white;
         }
         &__user {
           font-size: 11px;
-          color: #ffffff;
+          color: $font-white;
         }
       }
       &__link {
-        color: #ffffff;
+        color: $font-white;
       }
     }
   }
@@ -72,54 +72,43 @@
           display: flex;
           &__person {
             font-size: 12px;
-            color: #999999;
-            
+            color: #999999;            
           }
         }
-      }
-     
+      }     
       .edit-btn {
         display: block;
         position: absolute;
         right: 40px;
         margin-top: 28px;
         padding: 0 20px;
-        border: solid 1px #38aef0;
+        border: solid 1px $btn-color;
         height: 40px;
-        color: #38aef0;
+        color: $btn-color;
         line-height: 40px;       
-
        }    
     }
       
-    .chat {
-      
+    .chat {     
       height: calc(100vh - 285px);
-
       padding: 46px 40px;
       background-color: #fafafa;
-
       overflow: scroll;
       .contents {
-        margin-bottom: 40px;
-        
+        margin-bottom: 40px;       
         &__block {
           display: flex;
           margin-bottom: 10px;
           &__user {
             font-size: 16px;
             color: #434a54;
-
           }  
           &__date {
             font-size: 12px;
             color: #999999;
             margin-left: 10px;
-
           }  
-          }
-
-      
+          }      
         &__message {
           font-size: 14px;
           color: #434a54;
@@ -131,62 +120,45 @@
       padding: 20px 40px;
       background-color: #ddd;
       .form {
-        display: flex;
-        
+        display: flex;       
         .form__block {
           display: flex;
           position: relative;
-          width: 100%;
-          
+          width: 100%;         
           .input-text {
-
             height: 50px;
             width: 100%;
             padding: 0 40px 0 10px;
-
-
           }
-          .input-box__image {
-            
+          .input-box__image {           
             position: absolute;
             font-size: 1.3rem;
             top: 10px;
             right: 25px;
-            .input-box__image__icon {
-              
+            .input-box__image__icon {             
               display: inline-block;
-
               font-size: inherit;
               text-rendering: auto;
               -webkit-font-smoothing: antialiased;
-
             }
             .input-box__image__file {
               display: none;
               position: absolute;
               right: 20px;
-            }  
-            
-          }
-            
+            }              
+          }           
         }        
         .input-form__btn {
-
           right: 40px;
-          background-color: #38aef0;
-          color: #ffffff;
+          background-color: $btn-color;
+          color: $font-white;
           height: 50px;
           width: 100px;
-          margin-left: 15px;
-
-            
-        }
-      
+          margin-left: 15px;            
+        }      
       }
-
     }
   }   
-
 }  
   
 
