--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -22,9 +22,9 @@
   .message   
     %form.form
       .form__block
-        %input{:type => "text", :placeholder => "type a message", :class => "input-text"}
+        %input{type: "text", placeholder: "type a message", class: "input-text"}
         %label{class: "input-box__image"}
           = icon('fas', 'image', class: 'input-box__image__icon')
-          %input{:type => "file", :class => "input-box__image__file"}       
-      %input{:type => "submit", :value => "send", :class => "input-form__btn"} 
+          %input{type: "file", class: "input-box__image__file"}       
+      %input{type: "submit", value: "send", class: "input-form__btn"} 
 
