devise_install_initial
deviseをインストール

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 @import "./reset";
 @import "font-awesome-sprockets";
 @import "./font-awesome";
+@import "modules/user";
 
 $font-white: #ffffff;
 $btn-color: #38aef0;
