--- a/app/views/devise/shared/_side_bar.html.haml
+++ b/app/views/devise/shared/_side_bar.html.haml
@@ -2,11 +2,11 @@
   .head
     .head__block
       .head__block__user
-        user
+        = current_user.name
       .head__block__icon
         = link_to "#", class: "head__btn" do
           = icon('fas', 'edit')
-        = link_to "#", class: "head__btn" do
+        = link_to edit_user_path(current_user), class: "head__btn" do
           = icon("fas", "cog")
         
   .body
