--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,8 @@
 @import "font-awesome-sprockets";
 @import "./font-awesome";
 @import "modules/user";
+@import "config/colors";
+@import "modules/flash";
 
 $font-white: #ffffff;
 $btn-color: #38aef0;
