--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,7 @@
 @import "modules/user";
 @import "config/colors";
 @import "modules/flash";
+@import "modules/group";
 
 $font-white: #ffffff;
 $btn-color: #38aef0;
