--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -4,15 +4,16 @@
       .head__block__user
         = current_user.name
       .head__block__icon
-        = link_to "#", class: "head__btn" do
+        = link_to new_group_path , class: "head__btn" do
           = icon('fas', 'edit')
         = link_to edit_user_path(current_user), class: "head__btn" do
           = icon("fas", "cog")
         
   .body
-    = link_to "#", class: "body__content__link" do
+    - current_user.groups.each do |group|
       .body__content
-        .body__content__group
-          group
-        .body__content__user
-          group-user
+        = link_to group_messages_path(group) do
+          .body__content__group
+            = group.name
+          .body__content__user
+            group-message
