add_group_message
グループのメッセージ機能を実装

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -63,6 +63,7 @@ $btn-color: #38aef0;
       height: 100px;
       padding: 0 40px;
       border-bottom: solid 1px #eeeeee;
+      
       .group-member {
         margin-top: 35px;
         &__group {
@@ -116,50 +117,46 @@ $btn-color: #38aef0;
         &__message {
           font-size: 14px;
           color: #434a54;
+          &__content {
+
+          }
         }
       }  
     }
-    .message {
-      height: 50px;
-      padding: 20px 40px;
-      background-color: #ddd;
-      .form {
-        display: flex;       
-        .form__block {
-          display: flex;
-          position: relative;
-          width: 100%;         
-          .input-text {
-            height: 50px;
-            width: 100%;
-            padding: 0 40px 0 10px;
-          }
-          .input-box__image {           
-            position: absolute;
-            font-size: 1.3rem;
-            top: 10px;
-            right: 25px;
-            .input-box__image__icon {             
-              display: inline-block;
-              font-size: inherit;
-              text-rendering: auto;
-              -webkit-font-smoothing: antialiased;
-            }
-            .input-box__image__file {
-              display: none;
-              position: absolute;
-              right: 20px;
-            }              
-          }           
-        }        
-        .input-form__btn {
-          right: 40px;
-          background-color: $btn-color;
-          color: $font-white;
-          height: 50px;
-          width: 100px;
-          margin-left: 15px;            
-        }      
+    
+    .form {
+      background-color: #DDDDDD;
+      box-sizing: border-box;
+      height: 90px;
+      padding: 20px 50px 20px 40px;
+      &__message {
+        border: none;
+        float: left;
+        height: 50px;
+        width: calc(100% - 150px);
+      }
+      &__mask {
+        background-color: $white;
+        float: left;
+        height: 50px;
+        padding-right: 10px;
+        &__image {
+          font-size: 20px;
+          line-height: 50px;
+        }
+        .hidden {
+          display: none;
+        }
+      }
+      &__submit {
+        background-color: $light_blue;
+        border: none;
+        color: $white;
+        float: right;
+        font-size: 16px;
+        height: 50px;
+        margin-left: 15px;
+        padding: 0 30px;
       }
     }
   }   
