--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -16,4 +16,4 @@
           .body__content__group
             = group.name
           .body__content__user
-            group-message
+            = group.show_last_message
