--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -6,6 +6,6 @@
       = message.created_at.strftime("%Y/%m/%d %H:%M")
   .contents__message
     - if message.content.present?
-      %p.contents__message__content
+      %p.contents__message__content{data: {message: {id: message.id}}}
         = message.content
     = image_tag message.image.url, class: 'lower-message__image' if message.image.present?
