auto_reload_complete
自動更新機能完成

--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -2,7 +2,7 @@
   .head
   
     .group-member
-      .group-member__group
+      .group-member__group{data: {group: {id: @group.id}}}
         = @group.name
       .group-member__member
         member :
